[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cocapn-shells"
version = "0.1.0"
description = "Agent capability shells as character sheets for the Cocapn Fleet"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["agent", "shell", "capability", "fleet", "cocapn"]

[project.urls]
Homepage = "https://github.com/SuperInstance/cocapn-shells"
Fleet = "https://cocapn.ai"
