[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cocapn-shells"
version = "3.0.0"
description = "FLUX v3.0 Agent Shells — register files with capability-based security"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["flux", "vm", "agent", "shell", "capability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
cocapn-shells = "cocapn_shells_flux:main"

[tool.hatch.build.targets.wheel]
packages = ["cocapn_shells_flux.py"]
